/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'java'
//    id "org.beryx.jlink" version "3.0.1"
}

repositories {
    mavenCentral()
}

dependencies {
    api 'org.springframework:spring-webmvc:5.3.23'
    api 'org.springframework:spring-test:5.3.23'
    api 'org.junit.jupiter:junit-jupiter:5.8.2'
    api 'org.junit.platform:junit-platform-engine:1.8.2'
    // api 'org.junit.platform:junit-platform-runner:1.8.2'
    api 'org.apache.httpcomponents:httpclient:4.5.6'
    api 'org.jsoup:jsoup:1.11.3'
    api 'io.projectreactor:reactor-core:3.2.3.RELEASE'
    api 'cglib:cglib:3.2.10'
    api 'ch.qos.logback:logback-classic:1.2.3'
    api 'com.deepoove:poi-tl:1.10.0'
    api 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0'
    api 'org.jetbrains.kotlin:kotlin-test:1.6.0'
    api 'com.alibaba:fastjson:1.2.75'
    api 'org.apache.velocity:velocity-engine-core:2.3'
    api 'org.apache.velocity.tools:velocity-tools-generic:3.1'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    api 'com.fasterxml.jackson.core:jackson-core:2.13.1'
    api 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
    api 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
    api 'io.netty:netty-all:4.1.73.Final'
    api 'one.util:streamex:0.8.1'
    api 'org.jooq:jool:0.9.14'
    api 'com.google.guava:guava:31.0.1-jre'
    api 'org.antlr:antlr4-runtime:4.10.1'
    api 'io.reactivex.rxjava3:rxjava:3.1.5'
    api 'io.vavr:vavr:1.0.0-alpha-4'
    api 'com.google.code.gson:gson:2.9.1'
    api 'com.googlecode.aviator:aviator:5.3.3'
    api 'org.javassist:javassist:3.30.2-GA'
    api 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    api 'org.glassfish.expressly:expressly:5.0.0'
    // testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
    // testImplementation 'org.junit.platform:junit-platform-console-standalone:1.8.2'
}

group = 'groupId'
version = '1.0-SNAPSHOT'
description = 'DataStructure'
java.sourceCompatibility = JavaVersion.VERSION_22
java.targetCompatibility = JavaVersion.VERSION_22


//publishing {
//    publications {
//        maven(MavenPublication) {
//            from(components.java)
//        }
//    }
//}

tasks.withType(JavaCompile).each {
    it.options.encoding = "UTF-8"
    it.options.compilerArgs += ['--enable-preview',
                                "--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                                "--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                                "--add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                                "--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                                " --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

//task wrapper(type: Wrapper) {
//    gradleVersion = '8.7'
//}

//tasks.withType(JavaCompile) {
//    options.compilerArgs += "--enable-preview"
//}
//
//tasks.withType(Test) {
//    jvmArgs += "--enable-preview"
//}
//
//tasks.withType(JavaExec) {
//    jvmArgs += '--enable-preview'
//}

//
//compileJava {
//    options.compilerArgs += ["--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
//                             "--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
//                             "--add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
//                             "--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
//                             " --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
//}